added all changes to see how this looks on github

--- a/exercise-3/final/client/eightball.html
+++ b/exercise-3/final/client/eightball.html
@@ -10,7 +10,7 @@
             </section>
             <section id='input-section'>
                 <p>
-                    Ask the eightball a yes or no question: 
+                    Ask the eightball a question: 
                 </p>
                 <form id='input-form'>
                     <input id='question' type='text' />
